[gd_scene load_steps=3 format=3 uid="uid://dhepox1pa1f27"]

[ext_resource type="Script" uid="uid://dmp8lkkvo3j87" path="res://scenes/levels/level_completed.gd" id="1_imp5d"]
[ext_resource type="Texture2D" uid="uid://nh0j5uskqga7" path="res://img/bg2.png" id="2_en1gx"]

[node name="LevelCompleted" type="Node2D"]
script = ExtResource("1_imp5d")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(626, 360)
texture = ExtResource("2_en1gx")

[node name="LevelCompleted" type="Label" parent="."]
offset_left = 3.0
offset_top = 71.0
offset_right = 1282.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 64
text = "You completed: Level 1"
horizontal_alignment = 1

[node name="LevelTime" type="Label" parent="."]
offset_left = 4.0
offset_top = 233.0
offset_right = 1277.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 38
text = "Time:"
horizontal_alignment = 1

[node name="ButtonRetry" type="Button" parent="."]
offset_left = 130.0
offset_top = 571.0
offset_right = 550.0
offset_bottom = 635.0
theme_override_font_sizes/font_size = 32
text = "Retry (Q)"

[node name="ButtonMenu" type="Button" parent="."]
offset_left = 743.0
offset_top = 571.0
offset_right = 1163.0
offset_bottom = 635.0
theme_override_font_sizes/font_size = 32
text = "Back to Menu (W)"

[node name="Achievement" type="RichTextLabel" parent="."]
offset_top = 326.0
offset_right = 1280.0
offset_bottom = 375.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][/center]"

[connection signal="button_up" from="ButtonRetry" to="." method="_on_button_retry_button_up"]
[connection signal="button_up" from="ButtonMenu" to="." method="_on_button_menu_button_up"]
